--- a/g2_perl/Makefile.PL.in
+++ b/g2_perl/Makefile.PL.in
@@ -4,7 +4,7 @@ use ExtUtils::MakeMaker;
 WriteMakefile(
     'NAME'	=> 'G2',
     'VERSION_FROM' => 'G2.pm', # finds $VERSION
-    'LIBS'	=> ['-L./lib -lg2.0.40 @LDFLAGS@'],  # e.g., '-lm' 
+    'LIBS'	=> ['-L./.. -lg2.0.40 @LDFLAGS@'],  # e.g., '-lm' 
     'DEFINE'	=> '@DEFS@',                    # e.g., '-DHAVE_SOMETHING' 
-    'INC'	=> '-I./include',               # e.g., '-I/usr/local/include' 
+    'INC'	=> '-I./../include',               # e.g., '-I/usr/local/include' 
 );
