Added Tijs Michels splines, small fixes in Makefile.in

--- a/Makefile.in
+++ b/Makefile.in
@@ -39,7 +39,7 @@ BASE_SRC = $(BASE_DIR)/g2_device.c         $(BASE_DIR)/g2_ui_control.c \
            $(BASE_DIR)/g2_virtual_device.c $(BASE_DIR)/g2_physical_device.c \
            $(BASE_DIR)/g2_graphic_pd.c     $(BASE_DIR)/g2_control_pd.c \
            $(BASE_DIR)/g2_ui_graphic.c     $(BASE_DIR)/g2_ui_virtual_device.c \
-           $(BASE_DIR)/g2_ui_device.c
+           $(BASE_DIR)/g2_ui_device.c      $(BASE_DIR)/g2_splines.c
 BASE_INS = $(BASE_DIR)/g2.h
 
 
@@ -77,7 +77,8 @@ shared: libg2.@LD_SHARED_EXT@
 
 libg2.a: $(OBJ)
 	$(AR) $(ARFLAGS) libg2.a $(OBJ)
-	test -n "$(RANLIB)" && $(RANLIB) $@
+	test ! -n "$(RANLIB)" || $(RANLIB) $@
+	test ! -f ./libg2.$(G2_VERSION).a || rm ./libg2.$(G2_VERSION).a
 	ln -s libg2.a libg2.$(G2_VERSION).a
 
 libg2.@LD_SHARED_EXT@: $(OBJ)
@@ -100,6 +101,7 @@ clean:
 	-(cd ./g2_perl ; make clean)
 	-rm -f ./g2_perl/test.ps ./g2_perl/test.gif
 	-rm -f ./libg2.@LD_SHARED_EXT@
+	-rm -f libg2.$(G2_VERSION).a
 
 demo:	libg2.a
 	(cd ./demo ; make)
