--- a/demo/Makefile.in
+++ b/demo/Makefile.in
@@ -11,7 +11,7 @@ CFLAGS = -I../src -I../src/X11 -I../src/PS -I../src/GIF @CFLAGS@ @DEFS@
 LDFLAGS = -L.. -lg2 @LDFLAGS@
 
 @DO_PS@DEMO_PS = simple_PS
-@DO_X11@DEMO_X11 = simple_X11
+@DO_X11@DEMO_X11 = simple_X11 pointer
 @DO_GIF@DEMO_GIF = simple_GIF
 
 DEMO = g2_test g2_splines_demo $(DEMO_PS) $(DEMO_X11) $(DEMO_GIF)
@@ -32,6 +32,9 @@ simple_PS:  simple_PS.c
 
 simple_X11:  simple_X11.c
 	$(CC) $(CFLAGS) simple_X11.c $(LDFLAGS) -o $@
+
+pointer:  pointer.c
+	$(CC) $(CFLAGS) pointer.c $(LDFLAGS) -o $@
 
 simple_GIF:  simple_GIF.c
 	$(CC) $(CFLAGS) simple_GIF.c $(LDFLAGS) -o $@
