--- a/configure.in
+++ b/configure.in
@@ -65,10 +65,16 @@ LDFLAGS="$LDFLAGS $X_LIBS -L/usr/local/lib"
 DO_PS='#'
 DO_X11='#'
 DO_GIF='#'
+DO_GD='#'
 
 AC_CHECK_LIB(m, main, DO_PS=''; LDFLAGS="$LDFLAGS -lm";AC_DEFINE(DO_PS), break)
 AC_CHECK_LIB(X11, main, DO_X11='';LDFLAGS="$LDFLAGS -lX11";AC_DEFINE(DO_X11))
-AC_CHECK_LIB(gd, main, DO_GIF='';LDFLAGS="$LDFLAGS -lgd";AC_DEFINE(DO_GIF))
+AC_CHECK_LIB(gd, main, have_gd=yes;LDFLAGS="$LDFLAGS -lgd", have_gd=no)
+
+if test "$have_gd" = yes; then
+	AC_CHECK_FUNC(gdImageGif, DO_GIF='';AC_DEFINE(DO_GIF))
+	AC_CHECK_FUNC(gdImagePng, DO_GD='';AC_DEFINE(DO_GD))
+fi
 
 #
 # Declare variables which we want substituted in the Makefile.in's
@@ -76,6 +82,7 @@ AC_CHECK_LIB(gd, main, DO_GIF='';LDFLAGS="$LDFLAGS -lgd";AC_DEFINE(DO_GIF))
 AC_SUBST(DO_PS)
 AC_SUBST(DO_X11)
 AC_SUBST(DO_GIF)
+AC_SUBST(DO_GD)
 
 AC_HEADER_STDC
 AC_CHECK_HEADERS(limits.h)
