--- a/demo/Makefile
+++ b/demo/Makefile
@@ -7,15 +7,31 @@
 
 
 CC = gcc
+##Linux
+F77 = g77
+CPP = /lib/cpp
 
-CFLAGS = -I../src -I../src/X11 -I../src/PS -I../src/GIF -g -O2  -I/usr/X11R6/include -I/usr/local/include  -DLINUX=1 -DDO_PS=1 -DDO_X11=1 -DSTDC_HEADERS=1 -DHAVE_LIMITS_H=1 
-LDFLAGS = -L.. -lg2   -L/usr/X11R6/lib -L/usr/local/lib -lm -lX11
+##OSF
+#F77 = f77
+#F77_FLAGS=-i8
+
+##AIX
+#F77 = xlf
+#CPP = /usr/ccs/lib/cpp
+
+##IRIX
+#F77 = f77 -n32
+#CPP = /lib/cpp -P -DFORTRAN
+
+CFLAGS = -I../src -I../src/X11 -I../src/PS -I../src/GIF -I../src/GD -g -O2  -I/usr/X11R6/include -I/usr/local/include  -DLINUX=1 -DDO_PS=1 -DDO_X11=1 -DDO_GD=1 -DSTDC_HEADERS=1 -DHAVE_LIMITS_H=1 
+LDFLAGS = -L.. -lg2   -L/usr/X11R6/lib -L/usr/local/lib -lm -lX11 -lgd
 
 DEMO_PS = simple_PS
 DEMO_X11 = simple_X11 pointer
 #DEMO_GIF = simple_GIF
+DEMO_GD = simple_gd
 
-DEMO = g2_test g2_splines_demo $(DEMO_PS) $(DEMO_X11) $(DEMO_GIF)
+DEMO = g2_test g2_splines_demo $(DEMO_PS) $(DEMO_X11) $(DEMO_GIF) $(DEMO_GD)
 
 all:	$(DEMO)
 
@@ -40,11 +56,17 @@ pointer:  pointer.c
 simple_GIF:  simple_GIF.c
 	$(CC) $(CFLAGS) simple_GIF.c $(LDFLAGS) -o $@
 
-demo_f: demo_f.f
-	f77 -i8 demo_f.f $(LDFLAGS) -o $@
+simple_gd:  simple_gd.c
+	$(CC) $(CFLAGS) simple_gd.c $(LDFLAGS) -o $@
 
+demo_f: demo_f.f
+	$(F77) $(F77_FLAGS) demo_f.f $(LDFLAGS) -o $@
+
+g2testf:
+	$(CPP)  -DLINUX=1 -DDO_PS=1 -DDO_X11=1 -DDO_GD=1 -DSTDC_HEADERS=1 -DHAVE_LIMITS_H=1  -E g2_test.F >g2_test.f
+	$(F77) g2_test.f $(LDFLAGS) -o g2testf
 
 clean:
-	-rm $(DEMO) demo_f *~ core *.ps *.gif
+	-rm $(DEMO) g2_testf demo_f *~ core *.ps *.gif
 
 
