--- a/configure.in
+++ b/configure.in
@@ -64,11 +64,13 @@ LDFLAGS="$LDFLAGS $X_LIBS -L/usr/local/lib"
 
 DO_PS='#'
 DO_X11='#'
+DO_WIN32='#'
 DO_GIF='#'
 DO_GD='#'
 
 AC_CHECK_LIB(m, main, DO_PS=''; LDFLAGS="$LDFLAGS -lm";AC_DEFINE(DO_PS), break)
 AC_CHECK_LIB(X11, main, DO_X11='';LDFLAGS="$LDFLAGS -lX11";AC_DEFINE(DO_X11))
+AC_CHECK_HEADER(windows.h, DO_WIN32='';AC_DEFINE(DO_WIN32)) 
 AC_CHECK_LIB(gd, main, have_gd=yes;LDFLAGS="$LDFLAGS -lgd", have_gd=no)
 
 if test "$have_gd" = yes; then
@@ -81,6 +83,7 @@ fi
 #
 AC_SUBST(DO_PS)
 AC_SUBST(DO_X11)
+AC_SUBST(DO_WIN32)
 AC_SUBST(DO_GIF)
 AC_SUBST(DO_GD)
 
