--- a/demo/Makefile.in
+++ b/demo/Makefile.in
@@ -29,8 +29,10 @@ LDFLAGS = -L.. -lg2 @LDFLAGS@
 @DO_X11@DEMO_X11 = simple_X11 pointer
 @DO_GIF@DEMO_GIF = simple_GIF
 @DO_GD@DEMO_GD = simple_gd
+@DO_WIN32@DEMO_WIN32 = simple_win32
 
-DEMO = g2_test g2_splines_demo $(DEMO_PS) $(DEMO_X11) $(DEMO_GIF) $(DEMO_GD)
+
+DEMO = g2_test g2_splines_demo $(DEMO_PS) $(DEMO_X11) $(DEMO_GIF) $(DEMO_GD) $(DEMO_WIN32)
 
 all:	$(DEMO)
 
@@ -48,6 +50,9 @@ simple_PS:  simple_PS.c
 
 simple_X11:  simple_X11.c
 	$(CC) $(CFLAGS) simple_X11.c $(LDFLAGS) -o $@
+
+simple_win32:  simple_win32.c
+	$(CC) $(CFLAGS) simple_win32.c $(LDFLAGS) -lkernel32 -lgdi32 -luser32 -lcomdlg32 -o $@
 
 pointer:  pointer.c
 	$(CC) $(CFLAGS) pointer.c $(LDFLAGS) -o $@
