--- a/configure.in
+++ b/configure.in
@@ -46,6 +46,7 @@ AC_SUBST(LD_SHARED_EXT)
 #
 AC_PROG_CC
 AC_PROG_CPP
+AC_PROG_CXX
 AC_PROG_RANLIB
 AC_PROG_INSTALL
 AC_CHECK_PROG(FIND, find, find, :)
