--- a/Makefile.in
+++ b/Makefile.in
@@ -4,7 +4,7 @@
 #
 #
 
-G2_VERSION = 0.49a
+G2_VERSION = 0.50
 
 #
 # g2 installation directories
@@ -47,7 +47,6 @@ BASE_INS = $(BASE_DIR)/g2.h
 @DO_PS@PS_SRC = $(PS_DIR)/g2_PS.c
 @DO_PS@PS_INS = $(PS_DIR)/g2_PS.h
 
-
 @DO_X11@X11_DIR = ./src/X11
 @DO_X11@X11_SRC = $(X11_DIR)/g2_X11.c
 @DO_X11@X11_INS = $(X11_DIR)/g2_X11.h
@@ -56,20 +55,15 @@ BASE_INS = $(BASE_DIR)/g2.h
 @DO_WIN32@WIN32_SRC = $(WIN32_DIR)/g2_win32.c $(WIN32_DIR)/g2_win32_thread.c 
 @DO_WIN32@WIN32_INS = $(WIN32_DIR)/g2_win32.h
 
-@DO_GIF@GIF_DIR = ./src/GIF
-@DO_GIF@GIF_SRC = $(GIF_DIR)/g2_GIF.c
-@DO_GIF@GIF_INS = $(GIF_DIR)/g2_GIF.h
-
-
 @DO_GD@GD_DIR = ./src/GD
 @DO_GD@GD_SRC = $(GD_DIR)/g2_gd.c
 @DO_GD@GD_INS = $(GD_DIR)/g2_gd.h
 
 
-SRC = $(BASE_SRC) $(PS_SRC) $(X11_SRC) $(WIN32_SRC) $(GIF_SRC) $(GD_SRC)
+SRC = $(BASE_SRC) $(PS_SRC) $(X11_SRC) $(WIN32_SRC) $(GD_SRC)
 OBJ = $(SRC:.c=.o)
 
-INS =  $(BASE_INS) $(PS_INS) $(X11_INS) $(WIN32_INS) $(GIF_INS) $(GD_INS)
+INS =  $(BASE_INS) $(PS_INS) $(X11_INS) $(WIN32_INS) $(GD_INS)
 
 .c.o:  
 	$(CC) $(CFLAGS) -c $< -o $@
@@ -107,9 +101,10 @@ clean:
 	-rm -f ./include/*.h
 	-$(FIND) . -name "*~" -exec rm -f {} \;
 	-(cd ./g2_perl ; make clean)
-	-rm -f ./g2_perl/test.ps ./g2_perl/test.gif
+	-rm -f ./g2_perl/test.ps
 	-rm -f ./libg2.@LD_SHARED_EXT@
 	-rm -f libg2.$(G2_VERSION).a
+	-rm -f a.out
 
 demo:	libg2.a
 	(cd ./demo ; make)
