--- a/demo/Makefile.in
+++ b/demo/Makefile.in
@@ -23,18 +23,17 @@ CPP = /lib/cpp
 #F77 = f77 -n32
 #CPP = /lib/cpp -P -DFORTRAN
 
-CFLAGS = -Wall -I../src -I../src/X11 -I../src/PS -I../src/GIF -I../src/GD @CFLAGS@ @DEFS@
-CXXFLAGS = -Wall -I../src -I../src/X11 -I../src/PS -I../src/GIF -I../src/GD @CXXFLAGS@ @DEFS@
+CFLAGS = -Wall -I../src -I../src/X11 -I../src/PS -I../src/GD @CFLAGS@ @DEFS@
+CXXFLAGS = -Wall -I../src -I../src/X11 -I../src/PS -I../src/GD @CXXFLAGS@ @DEFS@
 LDFLAGS = -L.. -lg2 @LDFLAGS@
 
 @DO_PS@DEMO_PS = simple_PS
 @DO_X11@DEMO_X11 = simple_X11 pointer
-@DO_GIF@DEMO_GIF = simple_GIF
 @DO_GD@DEMO_GD = simple_gd
 @DO_WIN32@DEMO_WIN32 = simple_win32
 
 
-DEMO = g2_test g2_splines_demo demo_cpp $(DEMO_PS) $(DEMO_X11) $(DEMO_GIF) $(DEMO_GD) $(DEMO_WIN32)
+DEMO = g2_test g2_splines_demo demo_cpp $(DEMO_PS) $(DEMO_X11) $(DEMO_GD) $(DEMO_WIN32)
 
 all:	$(DEMO)
 
@@ -59,9 +58,6 @@ simple_win32:  simple_win32.c
 pointer:  pointer.c
 	$(CC) $(CFLAGS) pointer.c $(LDFLAGS) -o $@
 
-simple_GIF:  simple_GIF.c
-	$(CC) $(CFLAGS) simple_GIF.c $(LDFLAGS) -o $@
-
 simple_gd:  simple_gd.c
 	$(CC) $(CFLAGS) simple_gd.c $(LDFLAGS) -o $@
 
@@ -71,11 +67,11 @@ demo_cpp: demo_cpp.cpp
 demo_f: demo_f.f
 	$(F77) $(F77_FLAGS) demo_f.f $(LDFLAGS) -o $@
 
-g2testf:
-	$(CPP) @DEFS@ -E g2_test.F >g2_test.f
-	$(F77) g2_test.f $(LDFLAGS) -o g2testf
+g2testf: g2_test.f
+	$(CPP) @DEFS@ -E g2_test.f > g2testf.f
+	$(F77) g2testf.f $(LDFLAGS) -o g2testf
 
 clean:
-	-rm $(DEMO) g2_testf demo_f *~ core *.ps *.eps *.png *.jpg *.gif
+	-rm $(DEMO) g2testf g2testf.f demo_f *~ core *.ps *.eps *.png *.jpg
 
 
