--- a/Makefile.in
+++ b/Makefile.in
@@ -67,9 +67,9 @@ OBJ = $(SRC:.c=.o)
 INS =  $(BASE_INS) $(PS_INS) $(X11_INS) $(WIN32_INS) $(GD_INS)
 
 #
-# define some phony targets demo
+# define some phony targets
 #
-.PHONY: all shared clean doc release
+.PHONY: all shared clean doc release demo
 
 #
 # major rule
