--- a/demo/Makefile.in
+++ b/demo/Makefile.in
@@ -23,17 +23,18 @@ CPP = /lib/cpp
 #F77 = f77 -n32
 #CPP = /lib/cpp -P -DFORTRAN
 
-CFLAGS = -I../src -I../src/X11 -I../src/PS -I../src/GD @CFLAGS@ @DEFS@
-CXXFLAGS = -I../src -I../src/X11 -I../src/PS -I../src/GD @CXXFLAGS@ @DEFS@
+CFLAGS = -I../src -I../src/X11 -I../src/PS -I../src/GD -I../src/FIG @CFLAGS@ @DEFS@
+CXXFLAGS = -I../src -I../src/X11 -I../src/PS -I../src/FIG/ -I../src/GD @CXXFLAGS@ @DEFS@
 LDFLAGS = -L.. -lg2 @LDFLAGS@
 
 @DO_PS@DEMO_PS = simple_PS
+@DO_FIG@DEMO_FIG = simple_FIG
 @DO_X11@DEMO_X11 = simple_X11 pointer
 @DO_GD@DEMO_GD = simple_gd
 @DO_WIN32@DEMO_WIN32 = simple_win32
 
 
-DEMO = g2_test g2_splines_demo demo_cpp $(DEMO_PS) $(DEMO_X11) $(DEMO_GD) $(DEMO_WIN32)
+DEMO = g2_test g2_splines_demo demo_cpp $(DEMO_PS) $(DEMO_FIG) $(DEMO_X11) $(DEMO_GD) $(DEMO_WIN32)
 
 all:	$(DEMO)
 
@@ -48,6 +49,9 @@ g2_splines_demo:  g2_splines_demo.c
 
 simple_PS:  simple_PS.c
 	$(CC) $(CFLAGS) simple_PS.c $(LDFLAGS) -o $@
+
+simple_FIG: simple_FIG.c
+	$(CC) $(CFLAGS) simple_FIG.c $(LDFLAGS) -o $@
 
 simple_X11:  simple_X11.c
 	$(CC) $(CFLAGS) simple_X11.c $(LDFLAGS) -o $@
@@ -72,6 +76,6 @@ g2testf: g2_test.f
 	$(F77) g2testf.f $(LDFLAGS) -o g2testf
 
 clean:
-	-rm $(DEMO) g2testf g2testf.f demo_f *~ core *.ps *.eps *.png *.jpg
+	-rm $(DEMO) g2testf g2testf.f demo_f *~ core *.ps *.fig *.eps *.png *.jpg
 
 
