--- a/configure.in
+++ b/configure.in
@@ -66,18 +66,28 @@ LDFLAGS="$LDFLAGS $X_LIBS -L/usr/local/lib"
 DO_PS='#'
 DO_FIG='#'
 DO_X11='#'
-DO_WIN32='#'
 DO_GD='#'
+DO_WIN32='#'
 
+
+#
+# check supported devices
+#
 AC_CHECK_LIB(m,main,DO_PS='';DO_FIG='';LDFLAGS="$LDFLAGS -lm";AC_DEFINE(DO_PS) AC_DEFINE(DO_FIG),break)
 AC_CHECK_LIB(X11, main, DO_X11='';LDFLAGS="$LDFLAGS -lX11";AC_DEFINE(DO_X11))
-AC_CHECK_HEADER(windows.h, DO_WIN32='';AC_DEFINE(DO_WIN32)) 
-AC_CHECK_LIB(gd, main, have_gd=yes;LDFLAGS="$LDFLAGS -lgd", have_gd=no)
-
-if test "$have_gd" = yes; then
+AC_CHECK_LIB(gd, main, have_gd=yes, have_gd=no)
+if test "$have_gd" = yes
+then
+	LDFLAGS="$LDFLAGS -lgd"
 	AC_CHECK_FUNC(gdImagePng, DO_GD='';AC_DEFINE(DO_GD))
 fi
-
+AC_CHECK_HEADER(windows.h, have_windows=yes, have_windows=no)
+if test "$have_windows" = yes
+then
+	LDFLAGS="$LDFLAGS -L/lib/win32api"
+	AC_CHECK_LIB(gdi32, main, DO_WIN32='';LDFLAGS="$LDFLAGS -lgdi32";AC_DEFINE(DO_WIN32))
+fi
+   
 #
 # Declare variables which we want substituted in the Makefile.in's
 #
