Cygwin related improvements.

--- a/configure.in
+++ b/configure.in
@@ -81,11 +81,21 @@ then
 	LDFLAGS="$LDFLAGS -lgd"
 	AC_CHECK_FUNC(gdImagePng, DO_GD='';AC_DEFINE(DO_GD))
 fi
-AC_CHECK_HEADER(windows.h, have_windows=yes, have_windows=no)
-if test "$have_windows" = yes
+
+#
+# handling cygwin environment (and gd for cygwin == bgd)
+#
+AC_CYGWIN
+if test "$CYGWIN" = yes
 then
 	LDFLAGS="$LDFLAGS -L/lib/win32api"
 	AC_CHECK_LIB(gdi32, main, DO_WIN32='';LDFLAGS="$LDFLAGS -lgdi32";AC_DEFINE(DO_WIN32))
+	AC_CHECK_LIB(bgd, main, have_bgd=yes, have_bgd=no)
+	if test "$have_bgd" = yes
+	then
+		LDFLAGS="$LDFLAGS -lbgd"
+		AC_CHECK_FUNC(gdImagePng, DO_GD='';AC_DEFINE(DO_GD))
+	fi
 fi
    
 #
