--- a/configure.in
+++ b/configure.in
@@ -60,26 +60,28 @@ AC_CHECK_LIB(dl, dlopen, have_dl=yes, have_dl=no)
 #
 AC_PATH_XTRA
 CFLAGS="$CFLAGS $X_CFLAGS -I/usr/local/include"
-LDFLAGS="$LDFLAGS $X_LIBS -L/usr/local/lib"
+LIBS="$X_LIBS -L/usr/local/lib"
 
 
 DO_PS='#'
 DO_FIG='#'
 DO_X11='#'
 DO_GD='#'
+DO_GIF='#'
 DO_WIN32='#'
 
 
 #
 # check supported devices
 #
-AC_CHECK_LIB(m,main,DO_PS='';DO_FIG='';LDFLAGS="$LDFLAGS -lm";AC_DEFINE(DO_PS) AC_DEFINE(DO_FIG),break)
-AC_CHECK_LIB(X11, main, DO_X11='';LDFLAGS="$LDFLAGS -lX11";AC_DEFINE(DO_X11))
+AC_CHECK_LIB(m,main,DO_PS='';DO_FIG='';LIBS="$LIBS -lm";AC_DEFINE(DO_PS) AC_DEFINE(DO_FIG),break)
+AC_CHECK_LIB(X11, main, DO_X11='';LIBS="$LIBS -lX11";AC_DEFINE(DO_X11))
 AC_CHECK_LIB(gd, main, have_gd=yes, have_gd=no)
 if test "$have_gd" = yes
 then
-	LDFLAGS="$LDFLAGS -lgd"
+	LIBS="$LIBS -lgd"
 	AC_CHECK_FUNC(gdImagePng, DO_GD='';AC_DEFINE(DO_GD))
+	AC_CHECK_FUNC(gdImageGif, DO_GIF='';AC_DEFINE(DO_GIF))
 fi
 
 #
@@ -88,14 +90,14 @@ fi
 AC_CYGWIN
 if test "$CYGWIN" = yes
 then
-	LDFLAGS="$LDFLAGS -L/lib/w32api"
-	AC_CHECK_LIB(gdi32, main, DO_WIN32='';LDFLAGS="$LDFLAGS -lgdi32";AC_DEFINE(DO_WIN32))
-	AC_CHECK_LIB(bgd, main, have_bgd=yes, have_bgd=no)
-	if test "$have_bgd" = yes
-	then
-		LDFLAGS="$LDFLAGS -lbgd"
-		AC_CHECK_FUNC(gdImagePng, DO_GD='';AC_DEFINE(DO_GD))
-	fi
+	LIBS="$LIBS -L/lib/w32api"
+	AC_CHECK_LIB(gdi32, main, DO_WIN32='';LIBS="$LIBS -lgdi32";AC_DEFINE(DO_WIN32))
+#	AC_CHECK_LIB(bgd, main, have_bgd=yes, have_bgd=no)
+#	if test "$have_bgd" = yes
+#	then
+#		LIBS="$LIBS -lbgd"
+#		AC_CHECK_FUNC(gdImagePng, DO_GD='';AC_DEFINE(DO_GD))
+#	fi
 fi
    
 #
@@ -106,6 +108,7 @@ AC_SUBST(DO_FIG)
 AC_SUBST(DO_X11)
 AC_SUBST(DO_WIN32)
 AC_SUBST(DO_GD)
+AC_SUBST(DO_GIF)
 
 AC_HEADER_STDC
 AC_CHECK_HEADERS(limits.h)
@@ -125,6 +128,7 @@ if test "$DO_FIG"   != "#"; then echo "    FIG"; fi
 if test "$DO_X11"   != "#"; then echo "    X11"; fi
 if test "$DO_WIN32" != "#"; then echo "    Win32"; fi
 if test "$DO_GD"    != "#"; then echo "    GD"; fi
+if test "$DO_GIF"    != "#"; then echo "    GD (GIF)"; fi
 
 echo
 echo "Unsupported devices:"
@@ -133,6 +137,7 @@ if test "$DO_FIG"    = "#"; then echo "    FIG"; fi
 if test "$DO_X11"    = "#"; then echo "    X11"; fi
 if test "$DO_WIN32"  = "#"; then echo "    Win32"; fi
 if test "$DO_GD"     = "#"; then echo "    GD"; fi
+if test "$DO_GD"     = "#"; then echo "    GD (GIF)"; fi
 		   
 echo
 echo "Run 'make depend' to create dependencies."
