--- a/g2_python/Makefile.in
+++ b/g2_python/Makefile.in
@@ -8,28 +8,30 @@ LDSHARED=@LD_SHARED@
 
 # either ../libg2.so or ../libg2.a must be there
 # ../libg2.so is preferred
-ifeq ("$(LDSHARED)","")
+#ifeq ("$(LDSHARED)","")
 DEPENDENCY= libg2.a
-else
-DEPENDENCY= libg2.so
-endif
+#else
+#DEPENDENCY= libg2.so
+#endif
 
 all: build
 
 build: ../$(DEPENDENCY)
-	@python setup.py "$(DEFS)" "$(LIBS)" build_ext
+	python setup.py "$(DEFS)" "$(LIBS)" build_ext
 
 ../$(DEPENDENCY):
-	@cd ..; make $(DEPENDENCY)
+	cd ..; make $(DEPENDENCY)
 
 # must be root
 install: build
-	@python setup.py "$(DEFS)" "$(LIBS)" install
+	python setup.py "$(DEFS)" "$(LIBS)" install
 
 demo:
-	@ln -f -s $(shell find build -name g2.so) .
-	@python g2_test.py
+	ln -f -s $(shell find build -name g2.so) .
+	python g2_test.py
 
 clean:
 	-rm -fr build
 	-rm -f g2.so g2.map g2_test{_clip.eps,.{eps,ps,png,jpg,fig}} penguin.pyc
+
+
