--- a/g2_python/Makefile.in
+++ b/g2_python/Makefile.in
@@ -32,5 +32,5 @@ demo:
 
 clean:
 	-rm -fr build
-	-rm -f g2.so g2.map g2_test{_clip.eps,.{eps,ps,png,jpg,fig}} penguin.pyc
+	-rm -f g2.so g2.map g2_test{_clip.eps,.{eps,ps,png,jpg,fig}} *.py[co]
 
