--- a/g2_python/Makefile.in
+++ b/g2_python/Makefile.in
@@ -16,7 +16,9 @@ DEPENDENCY= libg2.a
 
 all: build
 
-build: ../$(DEPENDENCY)
+build: g2module.@OBJEXT@
+
+g2module.@OBJEXT@: ../$(DEPENDENCY)
 	python setup.py "$(DEFS)" "$(LIBS)" build_ext
 
 ../$(DEPENDENCY):
@@ -32,5 +34,5 @@ demo:
 
 clean:
 	-rm -fr build
-	-rm -f g2.so g2.map g2_test{_clip.eps,.{eps,ps,png,jpg,fig}} *.py[co]
+	-rm -f g2module.@OBJEXT@ g2.so g2.map g2_test{_clip.eps,.{eps,ps,png,jpg,fig}} *.py[co]
 
