--- a/configure.in
+++ b/configure.in
@@ -114,6 +114,12 @@ AC_SUBST(DO_WIN32)
 AC_SUBST(DO_GD)
 AC_SUBST(DO_GIF)
 AC_SUBST(PYTHON)
+if test "$PYTHON" = ""
+then
+	AC_SUBST(PYTHON_INSTALL,"")
+else
+	AC_SUBST(PYTHON_INSTALL,"make -C g2_python install")
+fi
 
 AC_HEADER_STDC
 AC_CHECK_HEADERS(limits.h)
