Added function g2_splines_set_points_per_cycle

--- a/g2_python/Makefile.in
+++ b/g2_python/Makefile.in
@@ -18,11 +18,11 @@ all: build
 
 build: g2module.@OBJEXT@
 
-g2module.@OBJEXT@: ../$(DEPENDENCY)
+g2module.@OBJEXT@: ../$(DEPENDENCY) g2module.c
 	python setup.py "$(DEFS)" "$(LIBS)" build_ext
 
 ../$(DEPENDENCY):
-	cd ..; make $(DEPENDENCY)
+	make -C .. $(DEPENDENCY)
 
 # must be root
 install: build
